# contract_processing_custom_tool

./: README.md  pyproject.toml
src/universal_file_downloader_processor/: crew.py  main.py
src/universal_file_downloader_processor/config/: agents.yaml  tasks.yaml
src/universal_file_downloader_processor/tools/: custom_tool.py
